# talkie

./: .gitignore  README.md  pyproject.toml
notebook/: Untitled.ipynb  Untitled1.ipynb
src/talkie/: config.py  logger_setup.py  main.py
src/talkie/chat/: api.py  ask.py  constants.py  create.py  lint.py  quick.py  response_metadata.py  utils.py
src/talkie/cli/: __init__.py  main.py
src/talkie/cli/commands/: __init__.py  ask.py  bye.py  create.py  hey.py  quick.py
src/talkie/cli/commands/greeting/special/: ola.py
src/talkie/fsutils/: directory.py  file.py
src/talkie/rag/: create.py  directory_rag.py  embedding.py  refresh.py  utils.py
talkie/: __main__.py  cli.py
talkie/greeting/: hello.py
talkie/rag/: _common.py  create.py  refresh.py
tests/chat/: test_utils.py
